Fixes #28: fix overflow input

--- a/src/pages/Chat.scss
+++ b/src/pages/Chat.scss
@@ -20,7 +20,7 @@
     bottom: 0;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 576px;
     padding: 30px 15px;
     box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
     background: white;
